--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 # Site
 
 title: Mynet Group
-url: http://mynet.company/
-baseurl: http://mynet.company/
+url: "http://mynet.company"
+baseurl: "http://mynet.company"
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product marketing template for Jekyll.
+description: 
 author:
   name:
   email:
