--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Mynet Group
 url: "http://mynet.company"
-baseurl: "http://mynet.company"
+baseurl: 
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
